<resources>
    <string name="app_name">Registro Udea</string>
    <string name="name">Nombre</string>
    <string name="register_form">Formulario de Registro</string>
    <string name="last_name">Apellidos</string>
    <string name="email">Correo Electrónico</string>
    <string name="register">Registrar</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="otherGender">Otro</string>
    <string name="askGender">Género:</string>
    <string name="info">"Nombre: %s\nApellidos: %s\nEmail: %s\nGénero: %s\nPasatiempos: %s\nFecha de nacimiento: %s\nLugar de Nacimiento: %s"</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="ask_hobbie">Pasatiempos:</string>
    <string name="exercise">Ejercicio</string>
    <string name="reading">Lectura</string>
    <string name="gaming">Videojuegos</string>
    <string name="traveling">Viajar</string>
    <string name="birthday">Fecha de nacimiento:</string>
    <string name="birthday_place">Lugar de nacimiento:</string>
    <string name="terms_conditions">Aceptar términos y condiciones</string>
    <string name="date_button_message">dd/mm/aa</string>
    <string name="missing_fill_message">No has introducido todo</string>
    <string name="success_message">Los datos son válidos</string>
    <string name="not_matching_passwords_message">Las contraseñas no coinciden</string>
    <string name="not_checked_terms">Acepta los términos y condiciones</string>
<string-array name="cities_list">
    <item>Bogotá</item>
    <item>Cali</item>
    <item>Cartago</item>
    <item>Medellín</item>
    <item>Pereira</item>
</string-array>
</resources>